heroku changes added

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jenika",
@@ -14,6 +15,7 @@
     "mongoose": "^6.5.3",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
-    "otp-generator": "^4.0.0"
+    "otp-generator": "^4.0.0",
+    "path": "^0.12.7"
   }
 }
