--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT=8080 || 3000
-MONGODB=mongodb://localhost:27017/exitexam
+PORT=8080
+MONGODB="mongodb+srv://jenika:universe1111@cluster0.bbzxi.mongodb.net/exitexam?retryWrites=true&w=majority"
